--- a/index.html
+++ b/index.html
@@ -8,24 +8,34 @@
     </head>
 
     <body>
-        <h1>Ye Olde Yorker</h1>
-        <caption>Add a custom caption to a New Yorker cartoon.</caption>
-        <button class="get-cartoon">Get new cartoon</button>
-        <form class="submit-caption">
-            <label for="add-caption">Add your caption</label>
-            <input id="add-caption" type="text" name="caption-input"
-                autocomplete="off" />
-            <input type="submit" value="Submit" />
-        </form>
-        <div class="cartoon-container"></div>
-        <footer>
-            <span class="attribution">All images come from the The New Yorker
-                random cartoon API
-            </span>
-            <span class="inspiration">
-                Inspired by <a href="https://www.newyorker.com/cartoons/random/">this</a>
-            </span>
-        </footer>
+
+        <div class="content">
+            <header>
+                <h1>Ye Olde Yorker</h1>
+                <caption>Add a custom caption to a cartoon from The New Yorker:</caption>
+            </header>
+
+            <main>
+                <div class="interactions-container margin-top-small">
+                    <form class="submit-caption">
+                        <input id="add-caption" class="border-custom font-small"
+                            type="text" name="caption-input"
+                            autocomplete="off" placeholder="Insert caption here"
+                            />
+                        <input class="border-custom font-small" type="submit"
+                            value="Submit" />
+                    </form>
+                    <button type="submit" class="get-cartoon border-custom
+                        font-small">Get new cartoon</button>
+                </div>
+                <div class="cartoon-container margin-top-small"></div>
+            </main>
+
+            <footer class="margin-top-small">
+                <a id="source-url" target="_blank" rel="noopener">View Source</a>
+            </footer>
+        </div>
+
         <script type="module" src="index.js"></script>
     </body>
 
