Remove rendering function and state

--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
 
             <main>
                 <div class="interactions-container margin-top-medium">
-                    <form class="submit-caption">
+                    <form class="caption-form">
                         <input id="add-caption" class="input-border-custom font-small"
                             type="text" name="caption-input"
                             autocomplete="off" placeholder="Insert caption here"
@@ -29,7 +29,10 @@
                         font-small">Get new cartoon</button>
                     </div>
                 </div>
-                <div class="cartoon-container margin-top-small"></div>
+                <div class="cartoon-container margin-top-small">
+                  <img alt="cartoon" />
+                  <div class="new-caption italic margin-top-medium"></div>
+                </div>
             </main>
 
             <footer class="margin-top-small">
