Fix link styling

--- a/index.html
+++ b/index.html
@@ -12,22 +12,29 @@
   <div class="content">
     <header>
       <h1>Ye Olde Yorker</h1>
-      <caption>Add a custom caption to a cartoon from The New Yorker:</caption>
+      <caption>Add a custom caption to a cartoon from 
+        <a class="italic" href="https://www.newyorker.com" target="_blank" rel="noopener noreferrer">The New Yorker</a>:
+      </caption>
     </header>
 
     <main>
       <div class="interactions-container margin-top-medium">
         <form class="caption-form">
-          <input id="add-caption" class="input-border-custom
-                            font-small" type="text" name="caption-input"
-            autocomplete="off" placeholder="Insert caption here" />
-          <input class="button-border-custom font-small
-                            margin-top-small" type="submit"
-            value="Submit" />
+          <input 
+          id="add-caption" 
+          class="input-border-custom font-small" 
+          type="text" name="caption-input" 
+          autocomplete="off" 
+          placeholder="Insert caption here" 
+          />
+          <input 
+          class="button-border-custom font-small margin-top-small" 
+          type="submit" 
+          value="Submit" 
+          />
         </form>
-        <div class="button-container">
-          <button class="get-cartoon button-border-custom
-                            font-small">Get new cartoon</button>
+        <div class="button-container margin-top-small">
+          <button class="get-cartoon button-border-custom font-small">Get new cartoon</button>
         </div>
       </div>
       <div class="cartoon-container margin-top-small">
@@ -37,7 +44,7 @@
     </main>
 
     <footer class="margin-top-small">
-      <a id="source-url" target="_blank" rel="noopener">View Source</a>
+      <a id="source-url" target="_blank" rel="noopener noreferrer">View Source</a>
     </footer>
   </div>
 
